http/http_part/serverdepnginxfancy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tn-part-serverdep 
  namespace: cms-ml
  labels:
    run: tn-part-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tn-part-server
  template:
    metadata: 
      labels:
        run: tn-part-server
    spec:
      containers:
      - name: tn-part-serverdep
        image: ondh/nginx-fancyindex
        resources:
           limits:
             memory: 200Mi
             cpu: "1"
           requests:
             memory: 50Mi
             cpu: 50m
        workingDir: /tn-part-vol
        volumeMounts:
        - mountPath: /tn-part-vol
          name: tn-part-vol
        - name: tn-part--nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: tn-part-vol
        persistentVolumeClaim:
          claimName: tn-pvc-base-jetclass2
      - name: tn-part--nginx-conf
        configMap:
          name: tn-part--nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - us-west
              - key: kubernetes.io/hostn-part-ame
                operator: NotIn
                values:
                  - suncave-17
